# websecurity-interaction-testing

.github/: dependabot.yml
.github/workflows/: codeql.yml  docs.yml  release-docs.yml  release-generated.yml  release.yml
document/: lib.typ  typst.toml
document/modules/: titlepage.typ
document/template/: abbreviations.typ  ipm.sublime-syntax  thesis.typ
document/template/chapters/: include.typ
document/template/chapters/1_preparation/: 1_preparation.typ  include.typ
document/template/settings/: metadata.typ
document/template/supplementary/: appendix.typ
exploit_source/: XSS-BruteLogic.txt  xss-payloads.txt
exploit_source/clusters/: .processed  AttributeBreakout.txt  DataURI.txt  EventHandler.txt  JSContext.txt  Other.txt  ProtocolHandler.txt  ScriptTag.txt  StyleCSS.txt
generated_ca_csv/: ca_attributebreakout_t2.csv  ca_eventhandler_t2.csv  ca_jscontext_t2.csv  ca_scripttag_t2.csv  ca_scripttag_t3.csv
ipm/: ipm1_scripttag.ipm.txt  ipm2_eventhandler.ipm.txt  ipm3_attributebreakout.ipm.txt  ipm4_jscontext.ipm.txt
translated_exploits/: ca_attributebreakout_t2.txt  ca_eventhandler_t2.txt  ca_jscontext_t2.txt  ca_scripttag_t2.txt  ca_scripttag_t3.txt
xss_ca/: Cargo.toml
xss_ca/.cargo/: config.toml
xss_ca/src/: cluster.rs  encoding.rs  error.rs  main.rs  manifest.rs  symbols.rs  translate.rs
