[package]
name = "xss_ca"
version = "1.0.0"
description = "XSS covering-array tool: translates CA CSVs into concrete injection payloads and clusters raw payload lists by structural pattern"
repository = "https://github.com/fh-salzburg-cys2025/websecurity-interaction-testing"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
csv  = "1.4"
rand = { version   = "0.10", default-features = false, features=["simd_support","thread_rng"] }

[workspace]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 1 }
restriction = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 1 }
blanket_clippy_restriction_lints = { level = "allow", priority = 2 }
future_not_send = { level = "allow", priority = 2 }
implicit_return = { level = "allow", priority = 2 }
separated_literal_suffix = { level = "allow", priority = 2 }
single_call_fn = { level = "allow", priority = 2 }
self_named_module_files = { level = "allow", priority = 2 }
pub_with_shorthand = { level = "allow", priority = 2 }
pub_use = { level = "allow", priority = 2 }

[lints]
workspace = true

[[bin]]
name = "xss_ca"
path = "src/main.rs"


[profile.release]
# Global release optimizations and security flags
panic = "abort"                                     # Abort process immediately on panic (smaller binary, no unwinding)
codegen-units = 1                                   # Use a single code generation unit for best optimizations
overflow-checks = false
lto = "fat"                                         # Use "fat" LTO for maximum cross-crate optimization
opt-level = 3                                       # Highest optimization level
debug = false
strip = "symbols"
incremental = false                                 # Disable incremental compilation for best release performance
